<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/actionBarItemBackground"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backButtonContentDescription"
        android:scaleType="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toStartOf="@+id/actionsPickingRecycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/backButtonBackgroundColor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actionsPickingRecycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxHeight="0dp"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/actionsPickHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfScreenGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/actionsPickHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/chooseActionsForHomeScreenText"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/halfScreenGuideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/nextButtonBackgroundColor"
        android:fontFamily="@font/manrope_medium"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:maxHeight="90dp"
        android:minHeight="64dp"
        android:text="@string/nextButtonText"
        android:textColor="@color/nextButtonTextColor"
        android:textSize="16sp"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionsPickHint" />

</androidx.constraintlayout.widget.ConstraintLayout>