<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.activities.onboardingActivity.OnboardingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/navigationOnboardingControllerContainerView"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="9dp"
            android:background="@color/backgroundColor"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@+id/progressIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/onboarding_navigation_graph" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/progressIndicatorProgressTint"
            android:scaleY="4"
            app:indicatorColor="@color/progressIndicatorIndicatorColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetLayout"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/bottom_sheet_background"
        android:elevation="32dp"
        android:nestedScrollingEnabled="false"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/actionPickingHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/bottomSheetActionPickingText"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/afterTextViewDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="23dp"
            android:background="@color/dividerColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionPickingHeader" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemPickRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:maxHeight="800dp"
            android:nestedScrollingEnabled="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionPickingHeader" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/circularProgressBarColor"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/itemPickRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemPickRecycler" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>