<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/actionBarItemBackground"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backButtonContentDescription"
        android:scaleType="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toStartOf="@+id/twoByThreeCard"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.09"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/backButtonBackgroundColor" />

    <androidx.cardview.widget.CardView
        android:id="@+id/twoByThreeCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/layoutCardBackgroundColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/twoByTwoCard"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent="0.35">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/gridImageTwoByThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/gridImageTwoByThreeDescription"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/grid_image_two_by_three" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/twoByTwoCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/layoutCardBackgroundColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toEndOf="@+id/twoByThreeCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent="0.35">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/gridImageTwoByTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/gridImageTwoByTwoDescription"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/grid_image_two_by_two" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/secondGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <RadioButton
            android:id="@+id/twoByThreeRadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/radioButtonColor"
            android:checked="true"
            android:layoutDirection="ltr" />

        <RadioButton
            android:id="@+id/twoByTwoRadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/radioButtonColor"
            android:layoutDirection="rtl" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/secondGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/firstGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/layoutPickHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/chooseGridLayoutText"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstGuideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/nextButtonBackgroundColor"
        android:fontFamily="@font/manrope_medium"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/nextButtonText"
        android:textColor="@color/nextButtonTextColor"
        android:textSize="16sp"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPickHint" />

</androidx.constraintlayout.widget.ConstraintLayout>